# hackathon-0

./: .gitlab-ci.yml  Cargo.toml  README.md  package-lock.json  package.json
Extension/: background.js  content.js  manifest.json  popup.html  popup.js
Extension/ext_3/: manifest.json  popup.html  popup.js  service-worker.js  tab-monitor.js  window-monitor.js
api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  run.sh  sample.env
api/email_agent_api/: env.py  main.py  payment.py
api/email_agent_api/lib/: get_llm_message_stream.py  payment.py
api/email_agent_api/routes/: example_emails.py  generate_email.py  register.py  user.py
chart/: README.md  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  certs.yaml  deployment.yaml
combined-heatmap/: README.md  package.json
docs/: CHANGELOG.md  index.rst  site.yaml
docs/architecture/: _template.md  index.rst
docs/guides/: index.rst
email-agent/: .gitlab-ci.yml  README.md
email-agent/Extension/: ScopeLinks.txt  manifest.json  popup.html  popup.js  service_worker.js
email-agent/api/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  run.sh
email-agent/api/email_agent_api/: env.py  get_llm_instance.py  main.py
email-agent/api/email_agent_api/lib/: log.py  mailparser.py  oauth.py  payment.py
email-agent/api/email_agent_api/routes/: generate_email.py  user.py
email-agent/chart/: Chart.yaml  values.yaml
grab-a-bevy/: README.md
grab-a-bevy/node/: package-lock.json  (+2 more)
node/: package.json  server.js
rust/: README.md
src/: main.rs
(+27 files in other folders)
