[tool.poetry]
name = "email-agent-api"
version = "0.1.0"
description = ""
authors = ["PageKeyers"]
readme = "README.md"
packages = [{ include = "email_agent_api" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
python-dotenv = "^1.0.1"
stripe = "^8.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
